# Boost_Search_Engine

./: CMakeLists.txt  Github_ProtectedRules_Check.cpp  LICENSE  Push_Rules_Check.cpp  README.md  architecture_diagram.html  build.bat  build_GCC.bat  build_MSVC.bat  install_dependencies.md  run.bat  test_search.html
boost/boost_1_88_0/bin.v2/: project-cache.jam
boost/boost_1_88_0/bin.v2/standalone/msvc/msvc-14.3/: msvc-setup.bat
boost/boost_1_88_0/stage/lib/cmake/boost_atomic-1.88.0/: boost_atomic-config.cmake
boost/boost_1_88_0/stage/lib/cmake/boost_chrono-1.88.0/: boost_chrono-config.cmake
boost/boost_1_88_0/stage/lib/cmake/boost_filesystem-1.88.0/: boost_filesystem-config.cmake
boost/boost_1_88_0/stage/lib/cmake/boost_headers-1.88.0/: boost_headers-config.cmake
boost/boost_1_88_0/stage/lib/cmake/boost_regex-1.88.0/: boost_regex-config.cmake
boost/boost_1_88_0/stage/lib/cmake/boost_system-1.88.0/: boost_system-config.cmake
boost/boost_1_88_0/stage/lib/cmake/boost_thread-1.88.0/: boost_thread-config.cmake
data/: Boost搜索引擎项目总结.md  sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  克苏鲁跑团&COC跑团.txt
include/: http_server.h  indexer.h  search_engine.h  text_processor.h
src/: http_server.cpp  indexer.cpp  main.cpp  search_engine.cpp  text_processor.cpp
web/: index.html  script.js  style.css
